force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <description>Stores information about students enrolled in xyz school.</description>
    <label>Student</label>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>