force-app/main/default/objects/Student__c/fields/Personal_Phone__c.field-meta.xml
<CustomField>
    <fullName>Personal_Phone__c</fullName>
    <label>Personal Phone</label>
    <type>Phone</type>
</CustomField>