force-app/main/default/objects/Student__c/fields/physical_diability__c.field-meta.xml
<CustomField>
    <fullName>physical_diability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>physical diability</label>
    <type>Checkbox</type>
</CustomField>