force-app/main/default/objects/Student__c/fields/Roll_no__c.field-meta.xml
<CustomField>
    <fullName>Roll_no__c</fullName>
    <label>Roll no</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>