force-app/main/default/objects/Student__c/recordTypes/All_students.recordType-meta.xml
<RecordType>
    <fullName>All_students</fullName>
    <active>true</active>
    <label>All students</label>
</RecordType>