force-app/main/default/objects/Student__c/recordTypes/X2nd_Record_type.recordType-meta.xml
<RecordType>
    <fullName>X2nd_Record_type</fullName>
    <active>true</active>
    <label>2nd Record type</label>
</RecordType>